close gh-17 Create unit tests and docker files