@@ -1,23 +1,24 @@
 package com.rivertech.betgametask.bet.service;
 
+import java.util.List;
+import org.mockito.Mock;
+import java.time.Instant;
+import org.mockito.Mockito;
+import org.mockito.InjectMocks;
+import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentMatchers;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.TestInstance;
 import com.rivertech.betgametask.TestUtils;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.PageImpl;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.junit.jupiter.api.extension.ExtendWith;
 import com.rivertech.betgametask.game.service.GameServiceImpl;
 import com.rivertech.betgametask.player.service.PlayerService;
-import com.rivertech.betgametask.utils.exception.GameRequestException;
 import com.rivertech.betgametask.utils.exception.NotFoundException;
+import com.rivertech.betgametask.utils.exception.GameRequestException;
 import com.rivertech.betgametask.utils.exception.WalletRequestException;
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.TestInstance;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.Mockito;
-import org.mockito.junit.jupiter.MockitoExtension;
-import java.time.Instant;
-import java.util.Arrays;
-
-import static org.mockito.ArgumentMatchers.any;
 
 @ExtendWith(MockitoExtension.class)
 @TestInstance(TestInstance.Lifecycle.PER_METHOD)
@@ -36,12 +37,10 @@ public class BetServiceTests extends TestUtils {
     @Mock
     private PlayerService playerService;
 
-
-
 	@Test
 	void placeBet_Success() throws NotFoundException, GameRequestException, WalletRequestException {
 
-        Mockito.when(betHistoryService.generateBetHistoryRecord(any())).thenReturn(Arrays.asList(betHistory));
+        Mockito.when(betHistoryService.generateBetHistoryRecord(ArgumentMatchers.any())).thenReturn(betHistory);
         Mockito.when(playerService.findByUserName(betForm.getPlayerUserName())).thenReturn(player);
         Mockito.lenient().when(betService.placeBet(betForm)).thenReturn(game);
 
@@ -52,7 +51,7 @@ public class BetServiceTests extends TestUtils {
     @Test
     public void toBet_Success() {
 
-        Mockito.when(betHistoryService.generateBetHistoryRecord(any())).thenReturn(Arrays.asList(betHistory));
+        Mockito.when(betHistoryService.generateBetHistoryRecord(ArgumentMatchers.any())).thenReturn(betHistory);
 
         var bet = betService.toBet(betForm, player, game);
 
@@ -66,46 +65,19 @@ public class BetServiceTests extends TestUtils {
         Assertions.assertEquals(game, bet.getGame());
         Assertions.assertEquals(Instant.class, bet.getPlacedAt().getClass());
         Assertions.assertNotNull(bet.getBetHistory());
-
-
     }
 
-//    @Test
-//    public void executeGame_NotFoundException() throws GameRequestException, NotFoundException {
-//
-//        Mockito.when(gameService.executeGame(NON_EXISTING_GAME_ID)).thenThrow(new NotFoundException("Game Not Found"));
-//        Assertions.assertThrows(NotFoundException.class, () -> gameService.executeGame(NON_EXISTING_GAME_ID));
+    @Test
+    public void retrieveBetResults_Success() throws NotFoundException {
 
-//        Mockito.when(gameRepo.findById(game.getId())).thenReturn(Optional.ofNullable(game));
-//        Mockito.when(gameService.executeGame(game.getId())).thenReturn(game);
-//        Mockito.doReturn(game).when(gameRepo.save(game));
-//        Mockito.lenient().when(betService.priceBetCalculator(game)).thenReturn(game);
-//        Mockito.when(betService.priceBetCalculator(game)).thenReturn(game);
-//        Mockito.when(betHistoryService.generateBetHistoryRecord(bet)).thenReturn(Arrays.asList(new BetHistory()));
-//        System.err.println("---- game.getGameResult() ----> "+game.getGameResult() );
-//        Mockito.when(gameService.executeGame(NON_EXISTING_GAME_ID))
-//                .thenThrow(new NotFoundException("Game already executed, not accepting more bets"));
-//        Assertions.assertThrows(GameRequestException.class, () -> gameService.executeGame(NON_EXISTING_GAME_ID));
-//
-//    }
+        Mockito.when(playerService.findByUserName(betForm.getPlayerUserName())).thenReturn(player);
+        Mockito.when(betHistoryService.retrieveBetResults(player, true, Pageable.unpaged())).thenReturn(new PageImpl<>(List.of(betHistory)));
 
-//    @Test
-//    public void addBetToGame_Success() {
-//        Mockito.when(gameService.addBetToGame(bet, game)).thenReturn(game);
-//        System.err.println("---- game.getBets() ----> "+game.getBets() );
-//        var gameOldState = game;
-//        Assertions.assertNotNull(game.getBets().get(0));
-//        Assertions.assertNotEquals(gameOldState.getBets().size(),
-//                                    gameService.addBetToGame(bet, game).getBets().size());
-//    }
-//
-//    @Test
-//    public void executeGame_GameAlreadyExecuted() throws GameRequestException, NotFoundException {
-//        Mockito.when(gameRepo.findById(game.getId())).thenReturn(Optional.ofNullable(game));
-//        game.setExecutedAt(Instant.now());
-//        Mockito.when(gameService.executeGame(game.getId()))
-//                .thenThrow(new GameRequestException("Game already executed, not accepting more bets"));
-//        Assertions.assertThrows(GameRequestException.class, () -> gameService.executeGame(game.getId()));
-//    }
+        var betHistory = betService.retrieveBetResults(betHisForm, Pageable.unpaged());
+        Assertions.assertNotEquals(betHistory, this.betHistory);
+        Mockito.verify(betHistoryService).retrieveBetResults(player, true, Pageable.unpaged());
+        Mockito.verify(playerService).findByUserName(betForm.getPlayerUserName());
+
+    }
 
 }
